Tag and review relationship works now, also update on reviews of questions